2020-05-27 - v1.6 - tehnick
    * Update plugin icon
    * Cosmetic fix in GnuPG info dialog for MS Windows

2020-05-21 - v1.5 - tehnick
    * Update plugin description: added info about installation and configuring
      of gpg-agent tool in user's operating system
    * Create default configuration file gpg-agent.conf during plugin load if it
      does not exist yet. "default-cache-ttl" is set to 34560000
    * Add gpg-agent configuration options to plugin options dialog

2020-05-18 - v1.4 - tehnick
    * Add "User ID" columns to "Known Keys" and "Own Keys" tabs in
      plugin options dialog
    * Small code refactoring

2020-05-18 - v1.3 - tehnick
    * Add "Known Keys" and "Own Keys" tabs to plugin options dialog
    * Improve performance of usage of gpg tool in plugin options dialog

2020-05-15 - v1.2 - tehnick
    * Cosmetic changes in plugin options dialog
    * Improve performance of usage of gpg tool a bit

2020-05-13 - v1.1 - tehnick
    * Fix automatic import of PGP key from the message body
    * Remove plugin button from chat toolbar: OpenPGP button from Psi core now
      have special menu items for sending of public keys

2020-05-12 - v1.0 - tehnick
    * Change short name of plugin from "gnupg" to "openpgp"
    * Change full name of plugin from "GnuPG Key Manager Plugin" to
      "OpenPGP Plugin"
    * Add all available OpenPGP related options to plugin options dialog
    * Preparation of plugin to moving OpenPGP related code from Psi core
    * Code refactoring

2020-04-29 - v0.4.0 - tehnick
    * Improve status messages

2015-10-26 - v0.3.9 - taurus
    * Фикс удаления ключей
    * Фикс переводов названий столбцов

2014-10-31 - v0.3.8 - taurus
    * Фикс магических чисел в модели

2014-10-31 - v0.3.7 - taurus
    * Фикс кнопки отправки ключа

2014-10-29 - v0.3.6 - taurus
    * Обе настройки по умолчанию включены
    + Добавлена колонка Expiration

2013-09-27 - v0.3.5 - taurus
    * Уменьшена иконка плагина