@@ -15,18 +15,27 @@
  * along with this program.  If not, see <https://www.gnu.org/licenses/>.
  */
 
+#include <QDebug>
+
+#include "accountinfoaccessinghost.h"
 #include "openpgpmessaging.h"
 #include "gpgprocess.h"
+#include "gpgtransaction.h"
 #include "optionaccessinghost.h"
+#include "pgputil.h"
 #include "psiaccountcontrollinghost.h"
 #include "stanzasendinghost.h"
+#include <QDomDocument>
 #include <QDomElement>
 
 using OpenPgpPluginNamespace::GpgProcess;
+using OpenPgpPluginNamespace::GpgTransaction;
 
 void OpenPgpMessaging::setStanzaSendingHost(StanzaSendingHost *host) { m_stanzaSending = host; }
 
 void OpenPgpMessaging::setOptionAccessingHost(OptionAccessingHost *host) { m_optionHost = host; }
+
+void OpenPgpMessaging::setAccountInfoAccessingHost(AccountInfoAccessingHost *host) { m_accountInfo = host; }
 
 void OpenPgpMessaging::setPsiAccountControllingHost(PsiAccountControllingHost *host) { m_accountHost = host; }
 
@@ -81,7 +90,14 @@ bool OpenPgpMessaging::incomingStanza(int account, const QDomElement &stanza)
     }
 }
 
-bool OpenPgpMessaging::outgoingStanza(int, QDomElement &) { return false; }
+bool OpenPgpMessaging::outgoingStanza(int account, QDomElement &stanza)
+{
+    if (stanza.tagName() == "presence") {
+        return processOutgoingPresence(account, stanza);
+    }
+
+    return false;
+}
 
 void OpenPgpMessaging::sendPublicKey(int account, const QString &toJid, const QString &keyId, const QString &userId)
 {
@@ -104,4 +120,42 @@ void OpenPgpMessaging::sendPublicKey(int account, const QString &toJid, const QS
     res.replace("&lt;", "<");
     res.replace("&gt;", ">");
     m_accountHost->appendSysMsg(account, toJid, res);
+}
+
+bool OpenPgpMessaging::processOutgoingPresence(int account, QDomElement &stanza)
+{
+    const QString &&keyId = m_accountInfo->getPgpKey(account);
+    if (keyId.isEmpty())
+        return false;
+
+    if (!m_optionHost->getPluginOption("sign-presence", true).toBool())
+        return false;
+
+    QString status;
+    QDomNodeList statusList = stanza.elementsByTagName("status");
+    if (!statusList.isEmpty()) {
+        status = statusList.at(0).toElement().text();
+    }
+
+    GpgTransaction transaction(GpgTransaction::Type::Sign, keyId);
+    transaction.setStdInString(status);
+
+    if (transaction.executeNow()) {
+        const QString &&signedStatus = PGPUtil::instance().stripHeaderFooter(transaction.stdOutString());
+        if (signedStatus.isEmpty())
+            return false;
+
+        QDomDocument doc;
+        QDomElement xItem = doc.createElementNS("jabber:x:signed", "x");
+        QDomText    xText = doc.createTextNode(signedStatus);
+        xItem.appendChild(xText);
+        stanza.appendChild(xItem);
+
+        return true;
+    } else {
+        PGPUtil::showDiagnosticText(
+                    tr("There was an error trying to sign your status.\nReason: %1.")
+                    .arg(transaction.stdErrString()), transaction.errorString());
+        return false;
+    }
 }
