@@ -359,6 +359,13 @@
         </widget>
        </item>
        <item>
+        <widget class="QCheckBox" name="doNotSignPresence">
+         <property name="text">
+          <string>Do not sign own presence status</string>
+         </property>
+        </widget>
+       </item>
+       <item>
         <spacer name="verticalSpacer_2">
          <property name="orientation">
           <enum>Qt::Vertical</enum>
