@@ -1,3 +1,7 @@
+2020-05-28 - v1.7 - tehnick
+    * Move more OpenPGP related code from Psi to plugin
+    * Add option "Do not sign own presence status" to plugin options dialog
+
 2020-05-27 - v1.6 - tehnick
     * Update plugin icon
     * Cosmetic fix in GnuPG info dialog for MS Windows
